--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="Cookbook de Bel-Ami - Osobní kuchařka plná receptů na předkrmy, hlavní chody a dezerty." />
     <meta name="keywords" content="recepty, kuchařka, předkrmy, hlavní chody, dezerty, vaření" />
     <meta name="author" content="Cookbook de Bel-Ami" />
+    <meta name="designer" content="Jiří Klatovský - JiKl-Coding">
+    <meta name="developer" content="Jiří Klatovský - JiKl-Coding">
+    <meta name="copyright" content="Jiří Klatovský - JiKl-Coding">
     <meta property="og:title" content="Cookbook de Bel-Ami" />
     <meta property="og:description" content="Objevte naši osobní kuchařku plnou lahodných receptů." />
     <meta property="og:image" content="https://www.belamicookbook.cz/assets/icons/main_icon.png" />
