--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Cookbook de Bel-Ami - Osobní kuchařka plná receptů na předkrmy, hlavní chody a dezerty." />
-    <meta name="keywords" content="recepty, kuchařka, předkrmy, hlavní chody, dezerty, vaření" />
+    <meta name="keywords" content="Belami Cookbook, recepty, kuchařka, evropské recepty, česká kuchyně, předkrmy, snídaně, hlavní chody, dezerty, vaření, inspirace na vaření, food blog, jednoduché recepty, moderní kuchyně, domácí vaření, JiKl, JiKl coding, JiKl-Coding, Jiří Klatovský" />
     <meta name="author" content="Cookbook de Bel-Ami" />
     <meta name="designer" content="Jiří Klatovský - JiKl-Coding">
     <meta name="developer" content="Jiří Klatovský - JiKl-Coding">
