seo-fix + og-image

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cz">
+<html lang="cs">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,13 +11,13 @@
     <meta name="copyright" content="Jiří Klatovský - JiKl-Coding">
     <meta property="og:title" content="Cookbook de Bel-Ami" />
     <meta property="og:description" content="Objevte naši osobní kuchařku plnou lahodných receptů." />
-    <meta property="og:image" content="https://www.belamicookbook.cz/assets/icons/main_icon.png" />
+    <meta property="og:image" content="https://www.belamicookbook.cz/assets/images/og-image.png" />
     <meta property="og:url" content="https://www.belamicookbook.cz/" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Cookbook de Bel-Ami" />
     <meta name="twitter:description" content="Objevte naši osobní kuchařku plnou lahodných receptů." />
-    <meta name="twitter:image" content="https://www.belamicookbook.cz/assets/icons/main_icon.png" />
+    <meta name="twitter:image" content="https://www.belamicookbook.cz/assets/images/og-image.png" />
 
     <title>Cookbook de Bel-Ami</title>
 
