--- a/main_dish.html
+++ b/main_dish.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="cz">
+<html lang="cs">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Hlavní chody." />
     <meta property="og:title" content="Hlavní chody - Cookbook de Bel-Ami" />
     <meta property="og:description" content="Inspirujte se našimi recepty na hlavní chody, které si zamilujete." />
-    <meta property="og:image" content="https://www.belamicookbook.cz/assets/images/hlavni_chody_pozadi.png" />
+    <meta property="og:image" content="https://www.belamicookbook.cz/assets/images/og-image.png" />
     <meta property="og:url" content="https://www.belamicookbook.cz/main-dish" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Hlavní chody - Cookbook de Bel-Ami" />
     <meta name="twitter:description" content="Inspirujte se našimi recepty na hlavní chody, které si zamilujete." />
-    <meta name="twitter:image" content="https://www.belamicookbook.cz/assets/images/hlavni_chody_pozadi.png" />
+    <meta name="twitter:image" content="https://www.belamicookbook.cz/assets/images/og-image.png" />
 
     <title>Hlavní chody - Cookbook de Bel-Ami</title>
 
