--- a/desserts.html
+++ b/desserts.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="cz">
+<html lang="cs">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Sladká tečka na konec. Vyzkoušejte naše oblíbené dezerty.">
     <meta property="og:title" content="Cookbook de Bel-Ami" />
     <meta property="og:description" content="Objevte naši osobní kuchařku plnou lahodných receptů." />
-    <meta property="og:image" content="https://www.belamicookbook.cz/assets/icons/main_icon.png" />
+    <meta property="og:image" content="https://www.belamicookbook.cz/assets/images/og-image.png" />
     <meta property="og:url" content="https://www.belamicookbook.cz/" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Cookbook de Bel-Ami" />
     <meta name="twitter:description" content="Objevte naši osobní kuchařku plnou lahodných receptů." />
-    <meta name="twitter:image" content="https://www.belamicookbook.cz/assets/icons/main_icon.png" />
+    <meta name="twitter:image" content="https://www.belamicookbook.cz/assets/images/og-image.png" />
     
     <title>Dezerty - Cookbook de Bel-Ami</title>
 
