--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <meta name="twitter:title" content="Cookbook de Bel-Ami" />
     <meta name="twitter:description" content="Objevte naši osobní kuchařku plnou lahodných receptů." />
     <meta name="twitter:image" content="https://www.belamicookbook.cz/assets/images/og-image.png" />
+    <meta author="Jiří Klatovský - JiKl-Coding">
+    <meta creator="Jiří Klatovský - JiKl-Coding">
+    <meta copyright="Jiří Klatovský - JiKl-Coding">
+    <meta name="robots" content="index, follow">
 
     <title>Cookbook de Bel-Ami</title>
 
@@ -42,6 +46,8 @@
   <body>
     
     <div class="navbar-placeholder"><!--Navbar placeholder--></div>
+
+    <h1 class="sr-only">Cookbook de Bel-Ami - Osobní kuchařka plná receptů na předkrmy, hlavní chody a dezerty.</h1>
 
     <!--MAIN Container-->
     <div class="main-grid-container">
