--- a/main_dish.html
+++ b/main_dish.html
@@ -13,6 +13,10 @@
     <meta name="twitter:title" content="Hlavní chody - Cookbook de Bel-Ami" />
     <meta name="twitter:description" content="Inspirujte se našimi recepty na hlavní chody, které si zamilujete." />
     <meta name="twitter:image" content="https://www.belamicookbook.cz/assets/images/og-image.png" />
+    <meta author="Jiří Klatovský - JiKl-Coding">
+    <meta creator="Jiří Klatovský - JiKl-Coding">
+    <meta copyright="Jiří Klatovský - JiKl-Coding">
+    <meta name="robots" content="index, follow">
 
     <title>Hlavní chody - Cookbook de Bel-Ami</title>
 
@@ -37,6 +41,8 @@
   <body>
 
     <div class="navbar-placeholder"><!--Navbar placeholder--></div>
+
+    <h1 class="sr-only">Hlavní chody - Cookbook de Bel-Ami</h1>
 
     <div class="food-type-container">
       <div class="h2-cell cell">
