--- a/recipe.html
+++ b/recipe.html
@@ -13,6 +13,10 @@
     <meta name="twitter:title" content="Recept - Cookbook de Bel-Ami" />
     <meta name="twitter:description" content="Zkuste náš výborný recept a obohaťte svůj jídelníček." />
     <meta name="twitter:image" content="https://www.belamicookbook.cz/assets/images/default_recipe_image.png" />
+    <meta author="Jiří Klatovský - JiKl-Coding">
+    <meta creator="Jiří Klatovský - JiKl-Coding">
+    <meta copyright="Jiří Klatovský - JiKl-Coding">
+    <meta name="robots" content="index, follow">
     
     <title>Recept - Cookbook de Bel-Ami</title>
 
@@ -72,6 +76,8 @@
         <p id="recipe-desc" class="container-content"></p>
       </div>
     </div>
+
+    <h1 class="sr-only" id="recipe-title-h1"></h1>
 
     <div class="footer-placeholder"><!--Footer placeholder--></div>
 
