--- a/appetizers.html
+++ b/appetizers.html
@@ -13,6 +13,10 @@
     <meta name="twitter:title" content="Cookbook de Bel-Ami" />
     <meta name="twitter:description" content="Objevte naši osobní kuchařku plnou lahodných receptů." />
     <meta name="twitter:image" content="https://www.belamicookbook.cz/assets/images/og-image.png" />
+    <meta author="Jiří Klatovský - JiKl-Coding">
+    <meta creator="Jiří Klatovský - JiKl-Coding">
+    <meta copyright="Jiří Klatovský - JiKl-Coding">
+    <meta name="robots" content="index, follow">
     
     <title>Snídaně & Předkrmy - Cookbook de Bel-Ami</title>
 
@@ -37,6 +41,7 @@
 
     <div class="navbar-placeholder"><!--Navbar placeholder--></div>
 
+    <h1 class="sr-only">Snídaně & Předkrmy - Cookbook de Bel-Ami</h1>
     <div class="food-type-container">
       <div class="h2-cell cell">
         <h2>SNÍDANĚ & PŘEDKRMY</h2>
