--- a/desserts.html
+++ b/desserts.html
@@ -13,6 +13,10 @@
     <meta name="twitter:title" content="Cookbook de Bel-Ami" />
     <meta name="twitter:description" content="Objevte naši osobní kuchařku plnou lahodných receptů." />
     <meta name="twitter:image" content="https://www.belamicookbook.cz/assets/images/og-image.png" />
+    <meta author="Jiří Klatovský - JiKl-Coding">
+    <meta creator="Jiří Klatovský - JiKl-Coding">
+    <meta copyright="Jiří Klatovský - JiKl-Coding">
+    <meta name="robots" content="index, follow">
     
     <title>Dezerty - Cookbook de Bel-Ami</title>
 
@@ -36,6 +40,8 @@
   <body>
 
     <div class="navbar-placeholder"><!--Navbar placeholder--></div>
+
+    <h1 class="sr-only">Dezerty - Cookbook de Bel-Ami</h1>
 
     <div class="food-type-container">
       <div class="h2-cell cell">
